# unix-socket

./: .travis.yml  Cargo.toml  README.md  build.rs
doc/: search-index.js
doc/master/unix_socket/: enum.AddressKind.html  index.html  stability.html  stability.json  struct.Incoming.html  struct.UnixListener.html
doc/src/unix_socket/: lib.rs.html
doc/unix_socket/: enum.AddressKind.html  index.html  sidebar-items.js  stability.html  stability.json  struct.Incoming.html  struct.SocketAddr.html  struct.UnixListener.html  struct.UnixStream.html
doc/v0.4.0/unix_socket/: index.html  struct.Incoming.html  struct.SocketAddr.html  struct.UnixListener.html  struct.UnixStream.html
doc/v0.4.1/unix_socket/: enum.AddressKind.html  index.html  struct.Incoming.html  struct.SocketAddr.html  struct.UnixListener.html  struct.UnixStream.html
doc/v0.4.2/: search-index.js
doc/v0.4.2/unix_socket/: enum.AddressKind.html  index.html  struct.Incoming.html  struct.SocketAddr.html  struct.UnixListener.html  struct.UnixStream.html
doc/v0.4.3/: search-index.js
doc/v0.4.3/unix_socket/: enum.AddressKind.html  index.html  struct.Incoming.html  struct.SocketAddr.html  struct.UnixDatagram.html  struct.UnixListener.html  struct.UnixStream.html
doc/v0.4.4/: search-index.js
doc/v0.4.4/unix_socket/: enum.AddressKind.html  index.html  stability.html  stability.json  struct.Incoming.html  struct.SocketAddr.html  struct.UnixDatagram.html  struct.UnixListener.html  struct.UnixStream.html
doc/v0.4.5/unix_socket/: enum.AddressKind.html  index.html  struct.Incoming.html  struct.SocketAddr.html  struct.UnixDatagram.html  struct.UnixListener.html  struct.UnixStream.html
doc/v0.4.6/: search-index.js
doc/v0.5.0/: search-index.js
examples/: socket_send.rs
src/: lib.rs  sendmsg_impl.rs
src/cmsg_manip/: cmsg.c
(+68 files in other folders)
