[package]
name = "unix_socket"
version = "0.4.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Unix domain socket bindings"
repository = "https://github.com/sfackler/rust-unix-socket"
documentation = "https://sfackler.github.io/rust-unix-socket/doc/v0.4.1/unix_socket"
readme = "README.md"
keywords = ["posix", "unix", "socket", "domain"]

[dependencies]
libc = "0.1"
debug-builders = "0.1"

[dev-dependencies]
tempdir = "0.3"

[features]
from_raw_fd = []
socket_timeout = []
