[package]
name = "unix_socket"
version = "0.4.5"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Unix domain socket bindings"
repository = "https://github.com/sfackler/rust-unix-socket"
documentation = "https://sfackler.github.io/rust-unix-socket/doc/v0.4.5/unix_socket"
readme = "README.md"
keywords = ["posix", "unix", "socket", "domain"]
links = "cmsg_manip"
build = "build.rs"

[dependencies]
libc = "0.1"
debug-builders = "0.1"

[build-dependencies]
gcc = "0.3"

[dev-dependencies]
tempdir = "0.3"

[features]
default = ["from_raw_fd"]

from_raw_fd = []
socket_timeout = []
