[package]
name = "unix_socket"
version = "0.4.5"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Unix domain socket bindings"
repository = "https://github.com/rust-lang-nursery/unix-socket"
documentation = "https://doc.rust-lang.org/unix-socket/doc/v0.4.5/unix_socket"
readme = "README.md"
keywords = ["posix", "unix", "socket", "domain"]

[dependencies]
libc = "0.1"
debug-builders = "0.1"

[dev-dependencies]
tempdir = "0.3"

[features]
default = ["from_raw_fd"]

from_raw_fd = []
socket_timeout = []
